// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> renders correctly if change tab 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ jfWBlV"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq eVGVUG"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ hXoNdk"
              selected={false}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq eVGVUG"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if change tab 2`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ hXoNdk"
              selected={false}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq eVGVUG"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ jfWBlV"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq eVGVUG"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop  1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <a
        href="test1"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jfjewJ"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test1
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="test2"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jFBgwR"
          onClick={[Function]}
          selected={false}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test2
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop icon 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ jfWBlV"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq eVGVUG"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop linkComponent passed 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jfjewJ"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set 1 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 2`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop text is empty 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly with default props 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    />
  </div>
</div>
`;
